--- a/MedVault/MainPage.xaml
+++ b/MedVault/MainPage.xaml
@@ -1,42 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MedVault.MainPage">
+             x:Class="MedVault.MainPage"
+             xmlns:model="clr-namespace:MedVault.Data.Models"
+             xmlns:viewmodel="clr-namespace:MedVault.ViewModels"
+             x:DataType="viewmodel:MedicinesViewModel"
+             Title="{Binding Title}">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+     <NavigationPage.TitleView>
+        <StackLayout Style="{StaticResource titleViewContainer}">
+            <Label Style="{StaticResource titleViewLabel}">Medicine App</Label>
+            <Button Command="{Binding RefreshCommand}" />
+        </StackLayout>
+    </NavigationPage.TitleView>
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+    <Grid
+        ColumnDefinitions="*,*"
+        ColumnSpacing="5"
+        RowDefinitions="*,Auto"
+        RowSpacing="0">
+        <CollectionView ItemsSource="{Binding Medicines}" SelectionMode="None" Grid.ColumnSpan="2">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:Medicine">
+                    <Grid Padding="10">
+                        <Frame HeightRequest="125" Style="{StaticResource CardView}">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MedicinesViewModel}}, Path=GoToDetailsCommand}"
+                                                      CommandParameter="{Binding .}"/>
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+                            </Frame.GestureRecognizers>
+                            <Grid Padding="0" ColumnDefinitions="Auto,Auto">
+                                <VerticalStackLayout Grid.Column="0" VerticalOptions="Center" Padding="10">
+                                    <Label>
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="{Binding MedicineName}" FontSize="Large"></Span>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+                                    <Label>
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="{Binding MedicineQuantity, StringFormat='Quantity: {0}'}" FontSize="Medium"></Span> 
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                </VerticalStackLayout>
+                            </Grid>
+                        </Frame>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        
+        <Button Text="New" Command="{Binding GoToCreateCommand}" 
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="20" BackgroundColor="Orange" TextColor="White"/>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+        <!--<Button Text="Refresh List" Command="{Binding RefreshMedicinesCommand}"
+                IsEnabled="{Binding IsNotBusy}"
+                Grid.Row="1"
+                Grid.Column="0"
+                Margin="8"/>-->
 
-        </VerticalStackLayout>
-    </ScrollView>
+        <ActivityIndicator IsVisible="{Binding IsBusy}"
+                           IsRunning="{Binding IsBusy}"
+                           HorizontalOptions="Fill"
+                           VerticalOptions="Center"
+                           Color="{StaticResource Blue100Accent}"
+                           Grid.RowSpan="2"
+                           Grid.ColumnSpan="2" />
+
+    </Grid>
 
 </ContentPage>
 
